--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <body>
-    <h1>Hello World Matako!</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <h1>Hello World!</h1>
+    <p>This is my little blogging</p>
 </body>
 
 </html>
